--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=lease-a-car
+# Database setup
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:lease-a-car
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# h2 console setup
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
