--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
+# loggin
+logging.level.root=ERROR
 
