feat: added unit tests for car controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.show-sql=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 # loggin
-logging.level.root=ERROR
+logging.level.root=WARN
 
