feat: setup docker images for pg admin, postgres and maildev

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>3.5.3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.7</version>
+        </dependency>
     </dependencies>
 
     <build>
