--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=lease-a-car
 # Database setup
-spring.datasource.username=admin
-spring.datasource.password=password
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:lease-a-car
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# h2 console setup
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:postgresql://localhost:5432/lease-a-car-db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,4 +12,11 @@ spring.jpa.show-sql=true
 springdoc.swagger-ui.path=/swagger-ui.html
 # logging
 logging.level.root=INFO
+## mail dev
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
 
