chore: styled registration email & bug fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 # logging
-logging.level.root=INFO
+logging.level.root=WARN
 ## mail dev
 spring.mail.host=localhost
 spring.mail.port=1025
